<resources>
    <string name="app_name">PaperRacing</string>
    <string name="main_activity_title">PaperRacing</string>
    <string name="settings_activity_title">PaperRacing - Settings</string>
    <string name="action_quickrace">Quickrace</string>
    <string name="action_race">Race</string>
    <string name="action_racestats">Race Stats</string>
    <string name="action_season">Season</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="about_title">About</string>
    <string name="help_title">Help</string>
    <string name="new_game_title">New Race</string>
    <string name="firstrun_1">Welcome to</string>
    <string name="firstrun_2">PaperRacing</string>
    <string name="firstrun_3">Choose \'Quickrace\' from menu</string>
    <string name="finished_1">Game finished!</string>
    <string name="finished_2">won!</string>
    <string name="crashed">crashed</string>
    <string name="name_player">Player</string>
    <string name="name_computer">Computer</string>
    <string name="quickrace_title">Quickrace</string>
    <string name="quickrace_new_title">New Quickrace</string>
    <string name="quickrace_player_on">active</string>
    <string name="quickrace_player_type_computer">computer</string>
    <string name="quickrace_player_type_human">human</string>
    <string name="quickrace_player_name">playername</string>
    <string name="race_title">Race</string>
    <string name="race_new_title">New Race</string>
    <string name="season_title">New Season</string>
    <string name="button_description">Go</string>
    <string name="racetable_header_player">Player</string>
    <string name="racetable_header_races">Races</string>
    <string name="racetable_header_won">Won (%)</string>
</resources>
